--- a/pruebagit.css
+++ b/pruebagit.css
@@ -1,5 +1,16 @@
 body{
-    color: deeppink;
+    color: rgb(59, 59, 59);
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+}
+#container{
+    width: 70%;
+    padding: 1em;
+    text-align: center;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+
+#container h1{
+    font-size: 40px;
 }
