--- a/pruebagit.css
+++ b/pruebagit.css
@@ -1,7 +1,7 @@
 body{
     color: rgb(59, 59, 59);
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
 }
 #container{
     width: 70%;
