--- a/pruebagit.css
+++ b/pruebagit.css
@@ -1,7 +1,7 @@
 body{
     color: rgb(59, 59, 59);
     text-align: center;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Arial, Helvetica, sans-serif;
 }
 #cabecera{
     background: rgb(35, 161, 84);
