--- a/login/assets/css/estiloss.css
+++ b/login/assets/css/estiloss.css
@@ -38,6 +38,8 @@ header{
 }
 .container_navbar{
     width: 100%;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .icon__menu{
@@ -58,7 +60,7 @@ header{
 
 .icon__notification{
     width: 50px;
-    height: 100%;
+    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -79,7 +81,7 @@ header{
     position: fixed;
     top: 0;
     left: 0;
-    color: white;
+    color: rgb(150, 2, 2);
     font-size: 18px;
     z-index: 300;
     overflow: hidden;
@@ -193,6 +195,8 @@ a.selected{
 @media screen and (min-width: 760px){
     .container_navbar{
         width: 85%;
+        display: flex;
+        justify-content: flex-end
     }
 
     
