--- a/login/assets/css/estilloss.css
+++ b/login/assets/css/estilloss.css
@@ -39,8 +39,11 @@ header{
 .container_navbar{
     width: 100%;
     display: flex;
-    justify-content: flex-end;
-    border: 1px;
+    justify-content:flex-end;
+    align-items: center;
+}
+.container_navbar p{
+    padding-bottom: 20px;
 }
 
 .icon__menu{
@@ -61,7 +64,7 @@ header{
 
 .icon__notification{
     width: 50px;
-    height: 50px;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -82,7 +85,7 @@ header{
     position: fixed;
     top: 0;
     left: 0;
-    color: rgb(150, 2, 2);
+    color: white;
     font-size: 18px;
     z-index: 300;
     overflow: hidden;
@@ -196,11 +199,97 @@ a.selected{
 @media screen and (min-width: 760px){
     .container_navbar{
         width: 85%;
-        display: flex;
-        justify-content: flex-end
     }
 
     
 
 
+}
+
+/*Seccion de contenidos en el main pagina Inicio*/
+.container-main{
+    width: 100%;
+    height: 100vh;
+}
+
+.container-informations{
+    width: 100%;
+    height: 200px;
+    display:flex;
+    justify-content:space-around;
+    align-items:center;
+    background-color:#ffffff;
+    margin-bottom: 20px;
+}
+
+.target-information{
+    width: 400px;
+    height: 150px;
+    border-radius: 5px;
+    background-color:rgb(245, 245, 245);
+    display:grid;
+    grid-template-columns:4fr 1fr;
+    padding:10px;
+    box-shadow: 6px 6px 4px rgba(0, 0, 0, 0.25);
+    
+}
+.section-contents{
+    display:flex;
+    flex-direction: column;
+    justify-content:space-around;
+}
+.section-icon-home{
+    display: flex;
+    justify-content:center;
+    align-items:center
+}
+
+.span-prices{
+    font-size:2rem;
+    font-weight: 300;
+}
+.span-percentage{
+    color: #3B9B00;
+}
+.span-percentage2{
+    color:rgb(255, 52, 52);
+}
+
+/*ESTILOS DEL SEGUNDO CONTAINER DE PANEL CONTRON ESTADISTICAS -MAPA*/
+.container-section-2{
+    width:100%;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 3fr 1.5fr;
+    grid-gap:30px;
+}
+.section-estadisticas{
+    width: 100%;
+    height: 600px;
+    border-radius:20px ;
+    box-shadow:0px 7px 25px rgba(0, 0, 0, 0.25) ;
+    
+}
+.section-estadisticas-mapa{
+    width: 100%;
+    height:600px;
+    border-radius:20px ;
+    box-shadow:0px 7px 25px rgba(0, 0, 0, 0.25) ;
+    
+
+}
+.container-title{
+    text-align: center;
+}
+.container-title h3{
+    font-size: 3rem;
+    font-weight: 400;
+}
+.container-section-mapa{
+    
+    padding: 20px 20px 20px 20px;
+}
+.container-grafica-estadistica{
+    width: 600px;
+    
 }
